src/dep/modules/ztf_bind/bindings/MathTypes.zig

pub const ztf_Float2 = anyopaque;
pub const ztf_Vector2 = anyopaque;
pub const ztf_Vector3 = anyopaque;
pub const ztf_Vector4 = anyopaque;
pub const ztf_IVector2 = anyopaque;
pub const ztf_IVector3 = anyopaque;
pub const ztf_IVector4 = anyopaque;
pub const ztf_UVector2 = anyopaque;
pub const ztf_UVector3 = anyopaque;
pub const ztf_UVector4 = anyopaque;
pub const ztf_Matrix2 = anyopaque;
pub const ztf_Matrix3 = anyopaque;
pub const ztf_Matrix4 = anyopaque;

pub const Float2	= ztf_Float2;
pub const Vector2 	= ztf_Vector2;
pub const Vector3 	= ztf_Vector3;
pub const Vector4 	= ztf_Vector4;
pub const IVector2	= ztf_IVector2;
pub const IVector3	= ztf_IVector3;
pub const IVector4	= ztf_IVector4;
pub const UVector2	= ztf_UVector2;
pub const UVector3	= ztf_UVector3;
pub const UVector4	= ztf_UVector4;
pub const Matrix2 	= ztf_Matrix2;
pub const Matrix3 	= ztf_Matrix3;
pub const Matrix4 	= ztf_Matrix4;

pub extern fn ztf_float2_new(in_float_array: [*c]const f32) ?*ztf_Float2;
pub extern fn ztf_float2_delete(in_float2: ?*ztf_Float2) void;
pub extern fn ztf_vec2_new(in_float_array: [*c]const f32) ?*ztf_Vector2;
pub extern fn ztf_vec2_delete(in_vec2: ?*ztf_Vector2) void;
pub extern fn ztf_vec3_new(in_float_array: [*c]const f32) ?*ztf_Vector3;
pub extern fn ztf_vec3_delete(in_vec3: ?*ztf_Vector3) void;
pub extern fn ztf_vec4_new(in_float_array: [*c]const f32) ?*ztf_Vector4;
pub extern fn ztf_vec4_delete(in_vec4: ?*ztf_Vector4) void;
pub extern fn ztf_ivec2_new(in_int_array: [*c]const i32) ?*ztf_IVector2;
pub extern fn ztf_ivec2_delete(in_ivec2: ?*ztf_IVector2) void;
pub extern fn ztf_ivec3_new(in_int_array: [*c]const i32) ?*ztf_IVector3;
pub extern fn ztf_ivec3_delete(in_ivec3: ?*ztf_IVector3) void;
pub extern fn ztf_ivec4_new(in_int_array: [*c]const i32) ?*ztf_IVector4;
pub extern fn ztf_ivec4_delete(in_ivec4: ?*ztf_IVector4) void;
pub extern fn ztf_uvec2_new(in_uint_array: [*c]const u32) ?*ztf_UVector2;
pub extern fn ztf_uvec2_delete(in_uvec2: ?*ztf_UVector2) void;
pub extern fn ztf_uvec3_new(in_uint_array: [*c]const u32) ?*ztf_UVector3;
pub extern fn ztf_uvec3_delete(in_uvec3: ?*ztf_UVector3) void;
pub extern fn ztf_uvec4_new(in_uint_array: [*c]const u32) ?*ztf_UVector4;
pub extern fn ztf_uvec4_delete(in_uvec4: ?*ztf_UVector4) void;
pub extern fn ztf_mat2_new(in_float_array: [*c]const f32) ?*ztf_Matrix2;
pub extern fn ztf_mat2_delete(in_mat2: ?*ztf_Matrix2) void;
pub extern fn ztf_mat3_new(in_float_array: [*c]const f32) ?*ztf_Matrix3;
pub extern fn ztf_mat3_delete(in_mat3: ?*ztf_Matrix3) void;
pub extern fn ztf_mat4_new(in_float_array: [*c]const f32) ?*ztf_Matrix4;
pub extern fn ztf_mat4_delete(in_mat4: ?*ztf_Matrix4) void;